compilateurDeca/src/test/deca/syntax/invalid/objet/comma.deca
// Description:
//  Liste de paramètres avec virgule finale.
// Resultats:
//    Echec (erreur de syntaxe)
//
// Historique:
//    cree le 15/01/2026

class A {
    int f(int a, ) { return a; }
}
{
}
